Update SRO Harddrive Metadata Collection Scripts.ipynb

--- a/scrapers/SRO Harddrive Metadata Collection Scripts.ipynb
+++ b/scrapers/SRO Harddrive Metadata Collection Scripts.ipynb
@@ -91,7 +91,7 @@
    "source": [
     "import psycopg2\n",
     "\n",
-    "connection = \"host='pg01.geogeeks.org' dbname='lost_towns' user='keith' password='geogeeks'\"\n",
+    "connection = \"host='pg01.geogeeks.org' dbname='lost_towns' user='keith' password='notmypassword'\"\n",
     "conn = psycopg2.connect(connection)\n",
     "cursor = conn.cursor()\n",
     "\n",
